# SynapseFlow

./: .coverage  .env.example  .gitignore  ADMIN_QUICKSTART.md  APOSTROPHE_FIX_STATUS.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  BEFORE_AFTER_COMPARISON.md  CHAT_FIXES_SUMMARY.md  CLAUDE.md  CLEANUP_SUMMARY.md  CURRENT_STATUS.md  DDA_PROCESSING_COMPLETE.md  DEMO_ORGANIZATION_PROPOSAL.md  Dockerfile.agent  ENVIRONMENT_VERIFICATION_REPORT.md  FIXES_APPLIED.md  FIXES_READY.md  FRONTEND_COMPLETE.md  FRONTEND_FIXES_SUMMARY.md  FRONTEND_PROGRESS.md  GRAPH_QUICKSTART.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INGESTION_ISSUES_ANALYSIS.md  Makefile  NEO4J_QUERIES.md  NEXT_ENHANCEMENTS_EVALUATION.md  PDF_INGESTION_COMPLETE.md  PDF_INGESTION_FINAL_SUMMARY.md  PDF_INGESTION_FIX_COMPLETE.md  PDF_INGESTION_STATUS.md  PHASE_2A_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_3C_COMPLETE.md  PHASE_3D_COMPLETE.md  PHASE_3E_COMPLETE.md  PHASE_3E_SUMMARY.md  PHASE_3F_COMPLETE.md  PHASE_3_STATUS.md  (+31 more)
analysis/: extended_kg_audit_report.md
config/: agents.distributed.yaml  agents.yaml
data/: document_tracking.json  faiss_index.index
demos/: README.md  demo_batch_dda_processing.py  demo_config.py  demo_intelligent_chat.py  demo_medical_data_linking.py  demo_metadata_query.py  demo_patient_memory.py  demo_pdf_ingestion.py  demo_presentation.py  interactive_chat.py  live_api_demo.py  migrate_medical_entities_to_neo4j.py  multi_agent_dda_demo.py  run_full_demo.py
docs/: DIRECTORY_STRUCTURE.md  IMPLEMENTATION_PROGRESS.md  INTEGRATION_COMPLETE.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PRODUCT_MATURITY_ANALYSIS.md  PROJECT_STATUS.md  QUALITY_METRICS_STATUS.md  eval_framework_usage.md
eval_reports/: latest.html  latest.json  report_20260208_141655.html  report_20260208_141655.json  report_20260208_142348.html  report_20260208_142348.json  report_20260208_142926.html  report_20260208_142926.json  report_20260208_143226.html  report_20260208_143226.json  report_20260208_143750.html  report_20260208_143750.json
examples/: ibd_template_dda.md
frontend/: README.md  astro.config.mjs  package-lock.json  package.json  playwright.config.ts  staticwebapp.config.json  tailwind.config.mjs  tsconfig.json
markdown_output/: 1745495737-en.md  ART7.md  Artculoderevisin-Crohn.md  Bookshelf_NBK580299.md  Bookshelf_NBK608308.md  NIH-Wide-Strategic-Plan-for-Autoimmune-Disease-Research-Fiscal-Years-2026-2030.md  S0210570520303186.md  S2173574316300661.md  Systemic-Lupus-Erythematosus.md  article.md  autoimmune_diseases_and_your_environment_508.md  comprehensive-review-on-systemic-lupus-erythematosus.md  en_1130-0108-diges-110-10-00650.md  ijms-25-07062-v2.md  jrcollphyslond146952-0082.md  s1.full.md  s41392-025-02168-0.md
queries/: metadata_queries.cypher
scripts/: README.md  analyze_token_costs.py  build_production.sh  cleanup_layer_transition_nodes.cypher  cleanup_patient_memories.py  clear_patient_memories.py  create_neo4j_indexes.cypher  generate_data_map.py  ingest_pdfs_for_rag.py  init_postgres.sql  manage_services.sh  migrate_odin_schema.py  ontology_batch_remediation.py  reprocess_all_pdfs.py  rules.yaml  (+2 more)
(+702 files in other folders)
